@@ -1,5 +1,6 @@
 Sources of icons:
 
 stock-*.png: RedHat Bluecurve icons (GPL Licence)
+pointer.png: From kdegraphics (GPL Licence)
 button_*.png: Drawn by JSS (GPL Licence)
 
